<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:id="@+id/lv_tet"
    android:padding="20dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/item_btnBook"
        android:layout_width="143dp"
        android:layout_height="57dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:src="@drawable/ic_book_black_24dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView

            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:text="@string/tenmon" />

        <TextView
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:text="@string/mamon" />

        <TextView

            android:layout_width="188dp"
            android:layout_height="match_parent"
            android:text="@string/sotin" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtten"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:text="@string/tenmon" />

        <TextView
            android:id="@+id/txtma"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:text="@string/mamon" />

        <TextView
            android:id="@+id/txtso"
            android:layout_width="188dp"
            android:layout_height="match_parent"
            android:text="@string/sotin" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"></LinearLayout>

</LinearLayout>
